temp: add performance improvments undergoing testing